===================================
Maxwell Pro Changelog
===================================

Version 1.0.4
-----------------------------------
* improved styling of footer navigation menu
* changed Google Font URL to https in Customizer
* updated custom color settings for pagination
* updated EDD Plugin Updater class to version 1.6.9

Version 1.0.3
-----------------------------------
* added RTL language support for all Pro features
* added 18 new Google Fonts to font settings

Version 1.0.2
-----------------------------------
* added custom styling for mega menu plugin
* improved browser prefixing of CSS stylesheets

Version 1.0.1
-----------------------------------
* updated plugin uploader class
* improved code formatting

Version 1.0
-----------------------------------
Initial Version